--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "unilever-foundry50",
+  "name": "node-angular-bluemix",
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "start": "node ./app.js"
+    "start": "node ./server/app.js"
   },
   "dependencies": {
     "body-parser": "^1.14.0",
